<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>HCProgramingLanguage</groupId>
  <artifactId>HCProgramingLanguage</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <build>
    <sourceDirectory>src/main/java/main</sourceDirectory>
    <resources>
      <resource>
        <directory>src/main/java/main</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  
  <dependencies>
    <!-- https://mvnrepository.com/artifact/junit/junit -->
	<dependency>
	  <groupId>junit</groupId>
	  <artifactId>junit</artifactId>
	  <version>4.13.1</version>
	  <scope>test</scope>
	</dependency>
	
	<!-- https://search.maven.org/artifact/org.fusesource.jansi/jansi/1.18/jar -->
	<!--
	<dependency>
	  <groupId>org.fusesource.jansi</groupId>
	  <artifactId>jansi</artifactId>
	  <version>1.18</version>
	</dependency>
	-->
	
  </dependencies>
</project>